[gd_scene load_steps=3 format=2]

[ext_resource path="res://shipyard/ShipyardGUI.gd" type="Script" id=1]
[ext_resource path="res://font_future_narrow.tres" type="DynamicFont" id=2]

[node name="ShipyardGUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 40.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullPanel" type="Panel" parent="Control/HBoxContainer"]
margin_left = 285.0
margin_right = 465.0
margin_bottom = 35.0
rect_min_size = Vector2( 180, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/HullPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/HullPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 170.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "[1] Hull"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Control/HBoxContainer/HullPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 170.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThrusterPanel" type="Panel" parent="Control/HBoxContainer"]
margin_left = 495.0
margin_right = 745.0
margin_bottom = 35.0
rect_min_size = Vector2( 250, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/ThrusterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/ThrusterPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "[2] Thruster"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Control/HBoxContainer/ThrusterPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurretPanel" type="Panel" parent="Control/HBoxContainer"]
margin_left = 775.0
margin_right = 995.0
margin_bottom = 35.0
rect_min_size = Vector2( 220, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/TurretPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/TurretPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 210.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "[3] Turret"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Control/HBoxContainer/TurretPanel/MarginContainer"]
margin_left = 10.0
margin_top = 5.0
margin_right = 210.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintPanel" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -150.0
margin_right = 75.0
margin_bottom = -100.0
grow_horizontal = 2
rect_min_size = Vector2( 350, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HintPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 2
text = "Click To Release Part"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
